2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Actions.cs:

	Arghl- somebody bound the ImportFolder action to the Remove
	action.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	Release 0.8.0.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	More comments back to where they belong.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Move comment about prefixes back to above the prefixes string,
	where it belongs. 

	Tamara, comments giving translators info about how to translate
	the thing should stay above the string.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddWindowEntry.cs:

	Restore "<enter> activates default" behaviour.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverGetter.cs:

	Only add border to amazon pixbuf if we got one.

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>
	
	* src/Actions.cs:
	* src/Global.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	
	Split off Actions from PlaylistWindow.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Item.cs:
	* src/Song.cs:

	Minor cleanups, and deal with Songs and Albums
	in SongWindow and AlbumWindow, not Items, as those
	are what the signals provide.

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>

	* data/glade/AddWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:
	* src/Album.cs:
	* src/Item.cs:
	* src/Makefile.am:
	* src/Song.cs:
	
	Split AddWindowEntry and AddWindowList off of AddWindow.
	Moved Song.FitsCriteria and Album.FitsCriteria to Item.

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/About.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/ErrorDialog.cs:
	* src/FileUtils.cs:
	* src/Global.cs:
	* src/Metadata.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs: